--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -145,7 +145,7 @@
                         <li>
                             <div class="divider-vertical"></div>
                         </li>
-                        <li class="profile"><a href="#">
+                        <li class="profile"><a href="#" data-toggle="modal" data-target="#loginModal">
                                 Log In
                                 <div class="underline">
                                     <div class="top"></div>
