--- a/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
@@ -10,7 +10,7 @@
             {% for spotlight in homespotlight %}
 
             <div class="wrap">
-                <a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">
+                {#<a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">#}
                 <img src="{{ spotlight.media.link }}" alt="{{ spotlight.media.name }}" />
                 </a>
                 <!--<span class="glyphicon glyphicon-play"></span>
