--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -34,8 +34,8 @@
                 <div class="profile-dropdown dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">
-                        <img class="avatar" src="{{ user.avatar }}" alt="Avatar">
-                        {{ user.firstname}} {{ user.lastname }} <span class="caret"></span>
+                        <img class="avatar" src="{{ app.user.avatar }}" alt="Avatar">
+                        {{ app.user.firstname}} {{ app.user.lastname }} <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
@@ -107,8 +107,8 @@
                     <li class="profile-dropdown dropdown hidden-sm">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">
-                            <img class="avatar" src="{{ user.avatar }}" alt="Avatar">
-                            {{ user.firstname}} {{ user.lastname }} <span class="caret"></span>
+                            <img class="avatar" src="{{ app.user.avatar }}" alt="Avatar">
+                            {{ app.user.firstname}} {{ app.user.lastname }} <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
