--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -1,5 +1,5 @@
 
-{% if user %}
+{% if is_granted('EDIT', artist) %}
     <div class="header-background" style="background-image: url({{ artist.user.background }})">
         <span id="bgImageSrc" class="hidden">{{ artist.user.background }}</span>
         <div class="background-stripe"></div>
@@ -12,7 +12,7 @@
 {% endif %}
     <span id="slug" class="hidden">{{ artist.slug }}</span>
     <section class="profile-info container">
-        {% if user %}
+        {% if is_granted('EDIT', artist) %}
             <div class="avatarEditable">
                <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
                <div id="editAvatar"><a href="#" data-toggle="modal" data-target="#changeImageModal"><i class="fa fa-pencil-square-o"></i></a></div>
@@ -38,7 +38,7 @@
                     <li><a href="#">See All <span class="glyphicon glyphicon-play" aria-hidden="true"></span></a>
                     </li>
                 </ul>
-                {% if user %}
+                {% if is_granted('EDIT', artist) %}
                     <a href="#" data-toggle="modal" id="editCategories" data-target="#categotiesModal"><i class="fa fa-pencil-square-o"></i></a>
                 {% endif %}
             </div>
