fixed Forgot Password link

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -213,7 +213,7 @@
                     <div class="form-group">
                         <label for="user_password">Password</label>
                         <input type="password" class="form-control" id="user_password" placeholder="Password" name="_password">
-                        <a class="forgot-password" href="#">Forgot?</a>
+                        <a class="forgot-password" target="_blank" href="{{ path('security_resetting_request') }}">Forgot?</a>
                     </div>
 
                     <div class="controls">
