--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -200,7 +200,7 @@
             </div>
 
             <div class="modal-body">
-                <form class="form-block login-form" action="{{ path('security_login_check') }}" method="post">
+                <form class="form-block login-form" action="{{ path('security_resetting_request') }}" method="post">
                     {#{% if error %}
                         <div class="alert alert-danger">
                             {{ error.messageKey|trans(error.messageData) }}
@@ -213,7 +213,7 @@
                     <div class="form-group">
                         <label for="user_password">Password</label>
                         <input type="password" class="form-control" id="user_password" placeholder="Password" name="_password">
-                        <a class="forgot-password" target="_blank" href="{{ path('security_resetting_request') }}">Forgot?</a>
+                        <a class="forgot-password" href="#">Forgot?</a>
                     </div>
 
                     <div class="controls">
