--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2099,3 +2099,9 @@ span.removeNewImage
     position: absolute;
     margin-left: 7px;
 }
+.errorCat
+{
+    color: #d9534f;
+    text-align: center;
+    display: none;
+}
