fix resetting url

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -229,7 +229,7 @@
 
                     <div class="form-group">
                         <label for="user_email_rec">Email</label>
-                        <input type="email" class="form-control" id="user_email_rec" placeholder="Email">
+                        <input name="email" type="email" class="form-control" id="user_email_rec" placeholder="Email">
                     </div>
 
                     <div class="controls">
