--- a/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
@@ -8,19 +8,20 @@
             <div class="prev-control"><i class="right fa fa-3x fa-angle-left"></i></div>
 
             {% for spotlight in homespotlight %}
+                {% if(spotlight.media.profiles.first) %}
+                    <div class="wrap">
+                        <a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">
+                            <img src="{{ spotlight.media.link }}" alt="{{ spotlight.media.name }}" />
+                        </a>
+                        <!--<span class="glyphicon glyphicon-play"></span>
 
-            <div class="wrap">
-                <a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">
-                <img src="{{ spotlight.media.link }}" alt="{{ spotlight.media.name }}" />
-                </a>
-                <!--<span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text"></div>
+                        <div class="caption-block">
+                            <div class="name">
+                                <div class="text"></div>
+                            </div>
+                        </div>-->
                     </div>
-                </div>-->
-            </div>
+                {% endif %}
             {% endfor %}
 
             <div class="next-control"><i class="right fa fa-3x fa-angle-right"></i></div>
