--- a/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/categories.html.twig
@@ -1,24 +1,24 @@
 <form id="categoriesForm">
 {% for category in categories %}
 
-    <div data-toggle-desktop="category-2" id="category-1" class="col-sm-6 col-xs-12 no-pad category">
+    <div data-toggle-desktop="category-2" class="col-sm-6 col-xs-12 no-pad category">
         <div class="category-header gradient-light">
             <div class="image-container">
-                <img src="{{ asset('assets/images/variety_acts.png') }}" alt="">
+                <img src="{{ category.image }}" alt="">
             </div>
             <span class="title">{{ category['title'] }}</span>
         </div>
         <div class="category-body">
-            {% for catChild in category['__children'] %}
-                <div class="row category-content variety-acts artistCategories">
 
+                <div class="row category-content variety-acts artistCategories">
+                    {% for catChild in category['__children'] %}
                     <div class="col-xs-6 category-item">
                         <input class="checkbox" type="checkbox" id="variety_category_id_{{ catChild['id'] }}" name="categories[]" value="{{ catChild['id'] }}">
                         <label for="variety_category_id_{{ catChild['id'] }}">{{ catChild['title'] }}</label>
                     </div>
-
+                    {% endfor %}
                 </div>
-            {% endfor %}
+
         </div>
     </div>
 
