--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -219,7 +219,7 @@
 
                     <div class="controls">
                         <div class="button-gradient filled">
-                            <button class="btn">Login</button>
+                            <button class="btn" id="loginBtn">Login</button>
                         </div>
                     </div>
                 </form>
