--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -6297,7 +6297,7 @@ span.removeNewImage
     position: absolute;
     margin-left: 7px;
 }
-.errorCat
+.errorCat, #errorLogIn
 {
     color: #d9534f;
     text-align: center;
