--- a/app/Resources/views/template/show.html.twig
+++ b/app/Resources/views/template/show.html.twig
@@ -3,8 +3,8 @@
 {% block body %}
     <h1>Template</h1>
 
-    <table>
-        <tbody>
+    <table style="width: 100%;">
+        <tbody class="templateFrame">
             <tr>
                 <th>Id</th>
                 <td>{{ template.id }}</td>
@@ -15,7 +15,7 @@
             </tr>
             <tr>
                 <th>Template</th>
-                <td><iframe srcdoc='{{ template.template|raw }}'>{{ template.template|raw }}</iframe></td>
+                <td><iframe style="width: 100%; height: 700px" srcdoc='{{ template.template|raw }}'>{{ template.template|raw }}</iframe></td>
             </tr>
             <tr>
                 <th>Is_active</th>
