--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -53,6 +53,19 @@ main {
 .row {
     margin: 0;
 }
+.ul-reset {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.row {
+    margin: 0;
+}
+
+.modal {
+    padding-right: 0!important;
+}
 
 main .scroll-icon {
     position: absolute;
