--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -1408,9 +1408,21 @@ header {
     position: relative;
 }
 
+header.search {
+    height: 490px;
+}
+
 header.home {
     height: 100vh;
     position: relative;
+}
+
+header.small {
+    max-height: 72px;
+}
+
+header.small .navbar {
+    background: #2228A3!important;
 }
 
 .home.header-background {
@@ -1436,7 +1448,7 @@ header.home {
             transform: translate(-50%, -50%);
 }
 
-.home.header-background .header-block {
+.header-background .header-block {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1444,7 +1456,13 @@ header.home {
             transform: translate(-50%, -50%);
     width: 80%;
     text-align: center;
-    max-width: 341px;
+}
+.home.header-background .header-block {
+    max-width: 342px;
+}
+
+.search.header-background .header-block {
+    max-width: 770px;
 }
 
 .home.header-background .background-panel {
@@ -1463,7 +1481,13 @@ header.home {
     margin-bottom: 73px;
 }
 
-.header-block input {
+.search .header-block h2 {
+    font-size: 40px;
+    margin-bottom: 32px;
+    margin-top: 34px;
+}
+
+.header-block input.search-input {
     line-height: 23px;
     text-align: center;
     width: calc(100% - 67px);
@@ -1476,6 +1500,70 @@ header.home {
     font-family: LatoRegular;
     font-size: 20px;
     color: #3d4248;
+}
+
+.header-block .wrapper {
+    width: calc(100% - 67px);
+    display: inline-block;
+    float: left;
+    height: 42px;
+    border-radius: 21px;
+    background: white;
+    overflow: hidden;
+}
+
+.header-block .wrapper input {
+    float: left;
+    line-height: 38px;
+    width: 35%;
+    color: rgba(61, 66, 72, 0.53);
+    font-family: LatoRegular;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+.header-block .wrapper .select2-container--default .select2-selection--single {
+    border-radius: 0;
+    height: 42px;
+    background-color: transparent;
+}
+
+.header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 42px;
+    color: rgba(61, 66, 72, 0.53);
+    font-family: LatoRegular;
+    font-size: 16px;
+}
+
+.header-block .wrapper .select2 {
+    width: 215px!important;
+    float: left;
+    margin-right: 0px;
+}
+
+.header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 8px;
+}
+
+.header-block .wrapper + .btn {
+    margin-top: -2px;
+}
+
+.header-block .wrapper + .btn span {
+    display: none;
+}
+
+.header-block .wrapper .divider {
+    display: inline-block;
+    width: 1px;
+    height: 32px;
+    position: relative;
+    float: left;
+    top: 5px;
+    background: #BEC0C2;
 }
 
 .header-block .btn {
@@ -1505,7 +1593,7 @@ header.home {
     left: 0;
     right: 0;
     z-index: 0;
-    background: no-repeat center;
+    background: url("../../assets/images/bg.jpg") no-repeat center;
     background-size: cover;
 }
 .header-background>.background-stripe {
@@ -1521,8 +1609,12 @@ header.home {
     height: 72px;
     background-color: rgba(59,68,235,0.49);
     margin: 0;
-    z-index: 10000;
+    z-index: 11;
     border: none;
+}
+
+.modal-open .navbar {
+    background-color: rgb(34, 40, 163)!important;
 }
 
 .navbar>.container-fluid {
@@ -1767,6 +1859,80 @@ header.home {
 @media (max-width: 767px) {
     .navbar .navbar-header .profile-dropdown {
         display: none;
+    }
+
+    .search .header-block h2 {
+        font-family: UbuntuBold;
+        font-size: 20px;
+        margin-bottom: 15px;
+        margin-top: 0px;
+    }
+
+    .header-block .wrapper {
+        width: 100%;
+    }
+
+    .header-block .wrapper + .btn {
+        font-size: 17px;
+        border-radius: 21px;
+        height: 42px;
+        width: 100%;
+        background: rgba(255,117,58,1);
+        color: white;
+        top: 10px;
+        position: relative;
+        -webkit-transform: scaleX(1);
+                transform: scaleX(1);
+    }
+
+    .header-block .wrapper + .btn i {
+        display: none;
+    }
+
+    .header-block .wrapper + .btn span {
+        display: block;
+        font-size: 15px;
+        font-family: LatoRegular;
+        color: #fff;
+    }
+
+    .header-block .wrapper {
+        overflow: visible;
+        background: transparent;
+        display: inline-table;
+    }
+
+    .header-block .wrapper input {
+        width: 100%;
+        border-radius: 21px;
+        text-align: center;
+    }
+
+    .header-block .wrapper .select2 {
+        width: 100%!important;
+    }
+
+    .header-block .wrapper .select2-container--default .select2-selection--single {
+        background: white;
+        border-radius: 21px;
+        margin-top: 10px;
+    }
+
+    .header-block .wrapper .divider {
+        display: none;
+    }
+
+    .header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__arrow {
+        top: 17px;
+    }
+
+    .header-block .wrapper .select2-container--default .select2-selection--single .select2-selection__rendered {
+        text-align: center;
+    }
+
+    .header-block .wrapper .select2-container--open .select2-selection--single {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
     }
 }
 
@@ -4217,6 +4383,19 @@ main {
 
 .row {
     margin: 0;
+}
+.ul-reset {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.row {
+    margin: 0;
+}
+
+.modal {
+    padding-right: 0!important;
 }
 
 main .scroll-icon {
