fixed generated PDF path (feedback 4)

--- a/app/Resources/views/performancecontract/index.html.twig
+++ b/app/Resources/views/performancecontract/index.html.twig
@@ -37,7 +37,7 @@
                             <a href="{{ path('performancecontract_edit', { 'id': performanceContract.id }) }}">edit</a>
                         </li>
                         <li>
-                            <a target="_blank" href="/{{ performancecontract_dir }}/{{ performanceContract.id }}.pdf">view PDF</a>
+                            <a target="_blank" href="/{{ performanceContract.pdfPath }}">view PDF</a>
                         </li>
                     </ul>
                 </td>
